--- a/index.html
+++ b/index.html
@@ -38,6 +38,31 @@
             $('input.slice_4.height').val(15).trigger('change');
             $('input.slice_5.height').val(15).trigger('change');
           }
+          if ( $(this).hasClass('vsg') ) {
+            $('input.slice_1.left').val(0).trigger('change');
+            $('input.slice_2.left').val(0).trigger('change');
+            $('input.slice_3.left').val(0).trigger('change');
+            $('input.slice_4.left').val(0).trigger('change');
+            $('input.slice_5.left').val(0).trigger('change');
+
+            $('input.slice_1.top').val(0).trigger('change');
+            $('input.slice_2.top').val(20).trigger('change');
+            $('input.slice_3.top').val(50).trigger('change');
+            $('input.slice_4.top').val(100).trigger('change');
+            $('input.slice_5.top').val(190).trigger('change');
+
+            $('input.slice_1.width').val(200).trigger('change');
+            $('input.slice_2.width').val(200).trigger('change');
+            $('input.slice_3.width').val(200).trigger('change');
+            $('input.slice_4.width').val(200).trigger('change');
+            $('input.slice_5.width').val(200).trigger('change');
+
+            $('input.slice_1.height').val(10).trigger('change');
+            $('input.slice_2.height').val(20).trigger('change');
+            $('input.slice_3.height').val(40).trigger('change');
+            $('input.slice_4.height').val(80).trigger('change');
+            $('input.slice_5.height').val(110).trigger('change');
+          }
           if ( $(this).hasClass('hd') ) {
 
             $('input.slice_1.left').val(0).trigger('change');
@@ -298,10 +323,12 @@
 
     <div id='pre_recorded_sets'>
       <h1>Pre configured values</h1>
+      <h2>Layouts</h2>
       <a href='#' class='vd'>vertical dispatch</a>
+      <a href='#' class='vsg'>vertical stripes growing</a>
       <a href='#' class='hd'>horizontal dispatch</a>
       <a href='#' class='co'>containing</a>
-
+      <h2>Transitions</h2>
       <a href='#' class='st'>slow transition</a>
       <a href='#' class='ft'>fast transition</a>
       <a href='#' class='at'>accelerationg transition</a>
