nicer colours; gradient

--- a/index.html
+++ b/index.html
@@ -300,11 +300,11 @@
                      width 0s ease-in-out 0ms,
                      height 0s ease-in-out 0ms;
       }
-      #slice_1 { background-color: red; }
-      #slice_2 { background-color: blue; }
-      #slice_3 { background-color: green; }
-      #slice_4 { background-color: orange; }
-      #slice_5 { background-color: lightgreen; }
+      #slice_1 { background-color: rgb(255, 0, 255); }
+      #slice_2 { background-color: rgb(215, 0, 255); }
+      #slice_3 { background-color: rgb(175, 0, 255); }
+      #slice_4 { background-color: rgb(135, 0, 255); }
+      #slice_5 { background-color: rgb(95, 0, 255); }
 
     </style>
 
